# forge

./: .easignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  HANDOFF.md  LICENSE  PLAN-unfinished-2026-07-11.md  PRODUCT.md  README.md  RELEASING.md  SECURITY.md  deny.toml  install-desktop.ps1  install-desktop.sh  install.ps1  install.sh
.cargo/: config.toml
.forge/agents/: rust-change-reviewer.md  rust-test-planner.md
.github/: actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: anonymous-telemetry.yml  app-desktop.yml  app-web.yml  automerge.yml  ci.yml  codeql.yml  e2e.yml  eas-update.yml  ios-runtime-fingerprint.yml  mobile-android.yml  mobile-eas.yml  mobile-sidestore.yml  mobile-typecheck.yml  release.yml  security.yml  testflight-autogroup.yml
Formula/: forge.rb
bucket/: forge.json
crates/forge-anywhere-protocol/: Cargo.toml
crates/forge-anywhere-protocol/examples/: golden.rs
crates/forge-anywhere-protocol/src/: bridge.rs  capsule.rs  command.rs  crypto.rs  envelope.rs  keys.rs  lib.rs  share.rs  sync.rs
crates/forge-anywhere-protocol/tests/: golden_vectors.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: api_serve.rs  apns.rs  attach.rs  balance.rs  bench.rs  benchmarks.rs  blame.rs  bridge_stats.rs  context_windows.rs  doctor.rs  live_observer.rs  local.rs  main.rs  mcp_agent.rs  mcp_serve.rs  push.rs  remote.rs  replay.rs  serve.rs  telemetry.rs  update.rs  update_check.rs  voice.rs
crates/forge-cli/src/anywhere/: connector.rs  handoff.rs  jobs.rs  mod.rs  push.rs  share.rs  sync.rs
crates/forge-cli/src/cli/: args.rs  dispatch.rs  mod.rs
crates/forge-cli/src/cli/commands/: assay.rs  blame.rs  git.rs  import.rs  lattice.rs  local.rs  marketplace.rs  mcp.rs  migrate.rs  mod.rs  models.rs  oauth_flow.rs  queue.rs  replay.rs  run.rs  schedule.rs  self_mcp.rs  service.rs  skill.rs  tests.rs  tour.rs  voice.rs
crates/forge-cli/src/cli/commands/run/: dispatch.rs  driver.rs  pickers.rs
crates/forge-cli/src/remote_assets/: app.js  page.html  styles.css  sw.js
crates/forge-cli/tests/: mcp_serve_e2e.rs  tui_e2e.rs
crates/forge-config/: Cargo.toml
crates/forge-config/src/: lib.rs  mcp.rs  oauth.rs  provider_oauth.rs  secret_store.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: assay.rs  capsule.rs  completion.rs  context_pack.rs  context_pipeline.rs  duel.rs  hooks.rs  lib.rs  llm_router.rs  permission.rs  project_context.rs  readiness.rs  snapshot.rs  subagent.rs  tokens.rs  turn_contract.rs  workflow.rs  worktree.rs
crates/forge-core/tests/: checkpoint_cwd.rs  session_workspace_isolation.rs  session_workspace_transition.rs  worktree_isolation.rs
crates/forge-index/: Cargo.toml
crates/forge-index/src/: embed.rs  extract.rs  lib.rs  retrieve.rs  watch.rs
crates/forge-lsp/: Cargo.toml
crates/forge-mcp/: Cargo.toml
crates/forge-mesh/: Cargo.toml
crates/forge-provider/: Cargo.toml
crates/forge-provider/src/: claude_bridge_home.rs  cli_provider.rs  codex_oauth.rs  codex_websocket.rs  embedder.rs  genai_provider.rs  lib.rs  mock.rs  oauth_responses.rs  tool_recovery.rs  xai_oauth.rs
crates/forge-provider/tests/: cli_bridge_live.rs  genai_contract.rs
crates/forge-relay/: Cargo.toml  Dockerfile  README.md  fly.toml
crates/forge-relay/deploy/: cloudflare-real-ip.conf  forge-relay.service  forge.adulari.dev.nginx  nginx-location.conf  relay.env.example  sshd-hardening.conf
crates/forge-relay/src/: apns.rs  config.rs  main.rs  ratelimit.rs
crates/forge-store/: Cargo.toml
crates/forge-tools/: Cargo.toml
crates/forge-tui/: Cargo.toml
crates/forge-voice/: Cargo.toml
crates/forge-voice/src/: decode.rs  lib.rs  model.rs  record.rs  transcribe.rs
crates/forge-workflow/: Cargo.toml
crates/xtasks/: Cargo.toml
docs/: RELEASING-crates.md  ROADMAP-v2-DELIVERED.md  STABILITY.md  comparison.md  config-schema.json  known-issues.md  quickstart.md  roadmap.md  telemetry.md
docs/anywhere/: agpl-service-boundary-checklist.md  privacy-data-inventory.md  recovery-and-handoff-drills.md  rollout-checklists.md
docs/architecture/: 01-requirements.md  02-architecture.md  containers.puml  cross-platform.md
docs/assets/: README.md
docs/benchmarks/: results.md
docs/design/: codex-oauth.md  oauth-account-rotation.md  pinned-outage-resilience.md  subscription-efficiency-routing.md
docs/features/: analysis-mode.md  code-intelligence.md  codex-oauth.md  command-skill-system.md  config-command.md  context-compaction.md  context-pipeline.md  duel.md  embed-ai-backend.md  embedding.md  forge-anywhere.md  forge-blame.md  fork-counterfactual.md  free-models.md  hooks.md  mcp-client.md  mesh-routing.md  migrate.md  persistent-bridge-transport.md  provider-cost-routing.md  provider-integrations.md  provider-test-strategy.md  queue-autopilot.md  quota-pace-tracking.md  remote-control.md  schedule.md  session-replay.md  shell-error-interceptor.md  shell-sandbox.md  subagent-orchestration.md  task-tracking.md  tui-header-statusline.md  web-tools.md  (+2 more)
homebrew/: forge.rb
mobile/: .gitignore  BUILD_PLAN.md  EAS_UPDATE.md  PrivacyInfo.xcprivacy  README.md  UI_RULES.md  app.config.ts  babel.config.js  eas.json  eslint.config.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile/src-tauri/: Cargo.toml  Info.plist  README.md  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: lib.rs  main.rs  serve_discovery.rs
protocol/: anywhere-licensing-boundary.md  anywhere-v1-threat-model.md  anywhere-v1.md  remote-v8.json
scripts/: bridge-e2e.sh  check-linux-runtime-deps.sh  collect-distribution-metrics.sh  e2e-battery.sh  e2e-docker.sh  release-upgrade-e2e.sh  setup-posthog-dashboard.sh  test-installer-config-safe.sh  testflight-assign-group.mjs  trigger-ios-build.mjs  tui-drive.sh  update-brew-formula.sh  update-package-manifests.sh
(+532 files in other folders)
