[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "2.7.0"
edition = "2021"
rust-version = "1.88"
license = "AGPL-3.0-only"
authors = ["Floris Voskamp"]
repository = "https://github.com/Adulari/forge"
description = "Fast, model-agnostic AI coding harness and CLI in Rust."

[workspace.dependencies]
# Internal crates. version MUST track workspace.package.version above so `cargo publish`
# resolves each path+version dep against the just-published sibling (a stale version here makes
# `cargo publish -p forge-cli` fail to select its deps). See docs/RELEASING-crates.md.
# Dependency KEYS stay `forge-X` so dependents' `forge-X.workspace = true` and all
# `use forge_X::` imports keep working with zero source changes; `package = "adforge-X"`
# points each at its renamed crates.io package (the `forge-*` names are taken). Lib names
# are preserved as `forge_X` in each crate's `[lib]` so import paths are unchanged.
forge-types = { package = "forge-agent-types", path = "crates/forge-types", version = "2.6.5" }
forge-config = { package = "forge-agent-config", path = "crates/forge-config", version = "2.6.5" }
forge-core = { package = "forge-agent-core", path = "crates/forge-core", version = "2.6.5" }
forge-index = { package = "forge-agent-index", path = "crates/forge-index", version = "2.6.5" }
forge-lsp = { package = "forge-agent-lsp", path = "crates/forge-lsp", version = "2.6.5" }
forge-mcp = { package = "forge-agent-mcp", path = "crates/forge-mcp", version = "2.6.5" }
forge-mesh = { package = "forge-agent-mesh", path = "crates/forge-mesh", version = "2.6.5" }
forge-provider = { package = "forge-agent-provider", path = "crates/forge-provider", version = "2.6.5" }
forge-skills = { package = "forge-agent-skills", path = "crates/forge-skills", version = "2.6.5" }
forge-store = { package = "forge-agent-store", path = "crates/forge-store", version = "2.6.5" }
forge-tools = { package = "forge-agent-tools", path = "crates/forge-tools", version = "2.6.5" }
forge-tui = { package = "forge-agent-tui", path = "crates/forge-tui", version = "2.6.5" }
forge-voice = { package = "forge-agent-voice", path = "crates/forge-voice", version = "2.6.5" }
forge-workflow = { package = "forge-agent-workflow", path = "crates/forge-workflow", version = "2.6.5" }

# External (pinned to current stable as of 2026-06; see ADRs)
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "io-util", "time", "net", "signal"] }
async-trait = "0.1"
# MCP protocol SDK; exact pin required for SSE stream compatibility.
rmcp = { version = "=2.1.0", default-features = false }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6", features = ["derive"] }
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
genai = "0.6"
# unstable-rendered-line-info: Paragraph::line_count, used to size insert_before so
# scrollback lines never clip or overlap the inline viewport. Compiles on stable.
ratatui = { version = "0.30", features = [
    "unstable-rendered-line-info",
    # insert_before MUST use terminal scroll-regions (ScrollUpInRegion + append_lines), NOT a
    # synchronous cursor-position DSR query. Without this, insert_before calls
    # crossterm::cursor::position() which writes `ESC[6n` and reads stdin for the reply — racing
    # our event-read loop on the same stdin → the whole TUI freezes (Ctrl-C dead).
    "scrolling-regions",
] }
crossterm = "0.29"
globset = "0.4"
shell-words = "1"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pulldown-cmark = { version = "0.13", default-features = false }
# default-fancy = bundled syntaxes/themes with the pure-Rust fancy-regex backend
# (no oniguruma C dep → clean cross-compile, smaller footprint).
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
similar = "3"
regex = "1"
# Real BPE token counting for precise context accounting (not a chars/token estimate). Bundles the
# o200k_base / cl100k_base vocabularies in-crate, so it works fully offline.
tiktoken-rs = "0.12"
# default-features off + rustls: reuse genai's existing rustls stack (no OpenSSL C dep).
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "form", "rustls", "stream"] }
# Remote control: a tiny HTTP + WebSocket server so a phone/desktop browser can drive the
# running `forge chat` session. axum bundles hyper + tokio-tungstenite; the WS layer needs
# `ws` (axum) which pulls tungstenite; `multipart` (pulls multer) parses the phone's
# file/image uploads on POST /api/upload. qrcode renders a scan-to-connect matrix into the TUI.
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio-tungstenite = "0.30"
qrcode = "0.14"
# Cross-platform hardware probe (total RAM, CPU cores) to recommend a local-LLM size. default
# off + only the components we read, to keep the dep light.
sysinfo = { version = "0.39", default-features = false, features = ["system"] }

[profile.release]
lto = "thin"
strip = true

# Full debuginfo made each debug/test binary ~480 MB; cargo writes a fresh one per build-hash and
# never GCs the old ones, so a session of `cargo test` runs piled up hundreds of GB in target/deps.
# Line-tables-only keeps file:line in backtraces/panics (enough for dev) at a fraction of the size.
[profile.dev]
debug = "line-tables-only"

# Vendored + patched genai 0.6.5 (vendor/genai-0.6.5, src/ + Cargo.toml only, examples/tests
# stripped): its plain-OpenAI streaming adapter only ever read `delta.tool_calls[0]`, silently
# dropping every other parallel tool call in an SSE message that batched more than one (a shape
# vLLM-based backends — e.g. NVIDIA NIM — commonly send). A later arguments-only delta for a
# dropped index then created a fresh call with an empty name, producing "unknown tool ''" and
# garbled arguments for every call after the first in a batch. Also fixed the sibling gap-fill
# bug (`resize` cloning the wrong call's data into skipped indices). Drop this patch once
# upstream genai ships an equivalent fix (https://github.com/jeremychone/rust-genai).
[patch.crates-io]
genai = { path = "vendor/genai-0.6.5" }
