[package]
name = "forge-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Forge — the model-agnostic AI coding agent. One harness, every provider."
repository.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[lib]
name = "forge_cli"

[dependencies]
forge-types.workspace = true
forge-config.workspace = true
forge-core.workspace = true
forge-index.workspace = true
forge-lsp.workspace = true
forge-mcp.workspace = true
forge-mesh.workspace = true
forge-provider.workspace = true
forge-skills.workspace = true
forge-tools.workspace = true
forge-store.workspace = true
forge-voice.workspace = true
crossterm.workspace = true
forge-tui.workspace = true
libc.workspace = true
clap.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
rmcp = { version = "2.0.0", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
serde = { workspace = true }
serde_json.workspace = true
toml = "1.1"
# APNs (crates/forge-cli/src/apns.rs) requires HTTP/2 — Apple's push gateway rejects HTTP/1.1.
reqwest = { workspace = true, features = ["http2"] }
futures.workspace = true
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
qrcode = { workspace = true }
base64 = "0.22"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
flate2 = "1.1.9"
tar = "0.4.46"
rcgen = "0.14"
rand = "0.10"
# Actionable Web Push (docs/features/remote-control.md §2d): RFC 8291 aes128gcm payload
# encryption + RFC 8292 VAPID JWTs, implemented on the audited RustCrypto stack (hkdf/hmac/
# sha2/aes are already in the dependency tree via other crates; p256 + aes-gcm are the only
# new leaves). No cloud relay: the encrypted message goes straight to the browser vendor's
# push endpoint over the in-tree reqwest/rustls.
# "pem"/"pkcs8": parsing the Apple-issued .p8 APNs auth key (crates/forge-cli/src/apns.rs),
# a PKCS8 PEM-encoded EC private key.
p256 = { version = "0.14", features = ["ecdh", "pem", "pkcs8"] }
hkdf = "0.13"
sha2 = "0.11"
aes-gcm = "0.11"
sysinfo = { workspace = true }
self_update = { version = "0.44.0", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "reqwest", "rustls"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
portable-pty = "0.9"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
# In-memory secret_store for tests (resolver=2: does not leak into production builds).
forge-config = { workspace = true, features = ["test-secrets"] }
