[package]
name = "forge-agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Forge session orchestrator: the agent loop and permission broker."
repository.workspace = true

[lib]
name = "forge_core"

[dependencies]
forge-types.workspace = true
forge-config.workspace = true
forge-index.workspace = true
forge-lsp.workspace = true
forge-mcp.workspace = true
forge-mesh.workspace = true
forge-provider.workspace = true
forge-skills.workspace = true
forge-tools.workspace = true
forge-store.workspace = true
forge-workflow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "1.1"
thiserror.workspace = true
tracing.workspace = true
globset.workspace = true
shell-words.workspace = true
async-trait.workspace = true
futures.workspace = true
similar.workspace = true
tiktoken-rs.workspace = true
tokio = { workspace = true }
flate2 = "1.1.9"
tar = "0.4.46"
sha2.workspace = true
tempfile = "3"
libc.workspace = true
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true }
forge-tui.workspace = true
# In-memory secret_store for tests (resolver=2: does not leak into production builds).
forge-config = { workspace = true, features = ["test-secrets"] }
