[package]
name = "forge-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lattice — native tree-sitter code-intelligence graph persisted in SQLite."

[dependencies]
forge-types = { workspace = true }
forge-store = { workspace = true }
forge-config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
sha2 = "0.10"
