[package]
name = "forge-agent-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Provider-agnostic model interface for Forge, backed by genai (ADR-0003)."
repository.workspace = true

[lib]
name = "forge_provider"

[dependencies]
forge-types.workspace = true
forge-config.workspace = true
forge-index.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true
genai.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
sha2.workspace = true
webpki-root-certs = "1"
# WS transport for codex-oauth's "v1"-tagged models (Luna) — the ChatGPT backend serves them
# ONLY over wss://, never plain HTTPS POST. rustls-tls-webpki-roots matches the rustls +
# bundled-webpki-roots stack `bundled_http_client()` already uses for reqwest (no second TLS
# stack / no OS trust store dependency).
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true }
httpmock = "0.8"
tempfile = "3"
# In-memory secret_store for tests (resolver=2: does not leak into production builds).
forge-config = { workspace = true, features = ["test-secrets"] }
