[package]
name = "forge-desktop"
version = "1.0.0"
description = "Forge desktop shell (Tauri v2 wrapping the web export)"
authors = ["Floris Voskamp"]
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/Adulari/forge"

# Standalone workspace: this crate lives inside the forge monorepo (whose root
# Cargo.toml is `[workspace] members = ["crates/*"]`) but is NOT one of those
# members. Without this empty `[workspace]` table, `cargo` walks up from here,
# finds the repo-root workspace, and errors with "current package believes it's
# in a workspace when it's not". This makes src-tauri its own workspace root.
[workspace]

[lib]
name = "forge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
# The JS transport seam (mobile/src/lib/transport/index.ts) calls
# `@tauri-apps/plugin-http` and `@tauri-apps/plugin-websocket`; both need their Rust-side
# plugin registered here too, or the JS calls fail at runtime with "plugin not found".
tauri-plugin-http = "2"
tauri-plugin-websocket = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
